--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
