--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
