--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "json-server": "^1.0.0-beta.3",
+    "lucide-vue-next": "^0.536.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
